--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "machinepack-passwords": "^2.2.0",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.10.6"
   },
   "scripts": {
     "start": "node app.js",
